vertical alignment fix

--- a/demo/src/styles/ProjectList.scss
+++ b/demo/src/styles/ProjectList.scss
@@ -23,13 +23,13 @@
 
 // span.project__attribute--image
 // .project__attribute--image {
-// 	border:1px solid #CCC;
-// 	width: 80px;
-// 	height: 80px;
-// 	text-align: center;
-// 	color: #FFF;
-// 	line-height: 2em;
-// 	background-color: #bbb;
+//  border:1px solid #CCC;
+//  width: 80px;
+//  height: 80px;
+//  text-align: center;
+//  color: #FFF;
+//  line-height: 2em;
+//  background-color: #bbb;
 // }
 // img.identicon
 // .identicon {
@@ -103,7 +103,7 @@
   position: absolute;
   right: -24px;
   overflow: hidden;
-  bottom: 10px;
+  bottom: 14px;
   i {
     cursor: pointer;
     display: block;
